wacc/test/golden/semanticErr.pairs.readUnknown
# Reading is not legal when the type is not known

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(pair, int) p = null;
  read fst fst p
end


Semantic error in test/wacc_examples/invalid/semanticErr/pairs/readUnknown.wacc (line 13, column 8):
type error: only ints and chars may be read, but a value of unknown type was found
>   pair(pair, int) p = null;
>   read fst fst p
>        ^
> end

